# blobfind

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: lock-format.md
examples/: README.md  fixture.sh
scripts/: smoke.sh
src/: baseline.rs  cli.rs  entropy.rs  inventory.rs  json.rs  lib.rs  main.rs  provenance.rs  report.rs  sha256.rs  sniff.rs  util.rs  walk.rs
tests/: cli.rs
